# agent-hub

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
agent_hub/: __init__.py  __main__.py  config.py  db.py  state_machine.py  worktree_manager.py
agent_hub/agents/: __init__.py  registry.py  runner.py  runner_options.py  session_store.py
agent_hub/dashboard/: broker.py  events.py  server.py
agent_hub/mcp_server/: __main__.py  server.py
agent_hub/memory/: capture.py  preferences.py  store.py
agent_hub/orchestrator/: __init__.py  epic.py  lock.py  push.py  resume.py  router.py  (+1 more)
scripts/: diagnose_pm.py  send_to_agent.py
tests/: conftest.py  test_auth_mode.py  test_budget_enforcement.py  test_commands_approve.py  test_commands_budget.py  test_commands_cancel.py  test_commands_memory.py  test_commands_reject.py  test_commands_resume.py  test_commands_status.py  test_commands_task.py  test_commands_tasks.py  test_dashboard_broker.py  test_dashboard_events.py  test_dashboard_lifecycle.py  test_dashboard_repo_publish.py  test_dashboard_server.py  test_epic.py  test_fake_runner.py  test_formatting.py  test_gate_reminders.py  test_gate_watcher.py  test_gates.py  test_handoff_loop.py  test_handoff_queue.py  test_lock.py  test_main_lock.py  test_main_orchestrator_lifecycle.py  test_mcp_server_e2e.py  test_mcp_server_import.py  test_mcp_tools_gates.py  test_mcp_tools_handoff.py  test_mcp_tools_memory.py  test_mcp_tools_tasks.py  test_mcp_tools_worktree.py  test_memory_capture.py  test_memory_preferences.py  test_memory_store.py  test_orchestrator_done_flow.py  test_orchestrator_handle.py  (+20 more)
(+56 files in other folders)
