[project]
name = "agent-hub"
version = "0.1.0"
description = "A team of Claude agents you manage over Telegram."
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "python-telegram-bot[job-queue]>=21.6",
    "aiosqlite>=0.20.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9",
    "PyYAML>=6.0.2",
    "structlog>=24.4.0",
    "anyio>=4.6",
]

[project.scripts]
agent-hub = "agent_hub.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_hub"]

[tool.ruff]
line-length = 100
target-version = "py311"
